# LakehouseBench

./: .gitignore  ReadMe.md  plot_analytical_results.py  plot_results.py  plot_scores.py  pyproject.toml  run_benchmark.py
benchmarks/: power.py  record.py  runner.py
catalogs/: __init__.py  base.py  ducklake.py  glue.py  local.py  s3tables.py
config/: ducklake_local.yml  ducklake_remote_data.yml  glue_catalog.yml  glue_target_file_size_500mb.yml  s3tables_catalog.yml
engines/: base.py
engines/duckdb/: catalog_adapters.py  engine.py
engines/spark/: engine.py
results/: logs.csv  time.csv
setup/: generate_answers.py  generate_data.py  mount.sh  write_tables.py
